# Project_2

./: .gitignore  CMakeLists.txt  README.md
shaders/: particle.frag  particle.vert
src/app/: main.cpp
src/common/: particle.h
src/physics/: nbody.cpp
src/renderer/: camera.cpp  camera.h  particle_renderer.cpp  particle_renderer.h  shader.cpp  shader.h  window.cpp  window.h
